[package]
name = "grey_os"
version = "0.1.0"
authors = ["SarahGreyWolf <m.sarahgreywolf@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Really unhappy with using libraries that I have no control over or understanding of
# Maybe replace them with my own implementations later?
[dependencies]
bootloader = "0.9.8"
volatile = "0.2.6"
# Spinlock implementation
spin = "0.9.0"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]