[package]
name = "grey_os"
version = "0.1.0"
authors = ["SarahGreyWolf <m.sarahgreywolf@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Really unhappy with using libraries that I have no control over or understanding of
# Maybe replace them with my own implementations later?
[dependencies]
bootloader = "0.9.8"
volatile = "0.2.6"
# Spinlock implementation
spin = "0.9.0"
# UART Init - I don't mind using this one, since it's mostly a debug thing
uart_16550 = "0.2.12"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
run-command = ["qemu-system-x86_64", "-drive", "format=raw,file={}",  "-L", "C:/Program Files/qemu"]
# iobase and iosize is the device port for qemu
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04"]
# The success exit code from QEMU on test success
test-success-exit-code = 33 # (0x10 << 1) | 1